# tech-munich-tacto

./: .env_example  .gitignore  README.md  elevenlab_api.py  eval_data.py  leverage_analysis_agent_promt.txt  pyproject.toml  utils_demo.py
app/: negotiation_agent.py  utils.py
app/pages/: 1_market_agent.py  2_supplier_overview.py  3_negotiation.py
dataset/: create.py  create_cost_factors.py
notebooks/: leverage_analyzer.py
prompts/: email_agent_prompt.txt  leverage_analysis_agent_promt.txt  strategy_formalizer_agent_prompt.txt  supplier_email_agent_prompt.txt
src/mistral/: agent.py  email_writer.py  leverage_analyzer.py  strategy_formalizer.py
src/mistral/tools/: eval_data.py  leverage_tools.py
