[project]
name = "tech-munich-tacto"
version = "0.1.0"
description = "Project code for tacto-challenge at tech:munich hackathon."
authors = [
    {name = "Lennard Schaub, Benjamin Schuster, Raul Dominguez, Nils Fleischmann"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"