[project]
name = "tech-munich-tacto"
version = "0.1.0"
description = "Project code for tacto-challenge at tech:munich hackathon."
authors = [
    {name = "Lennard Schaub, Benjamin Schuster, Raul Dominguez, Nils Fleischmann"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9"
pandas = "^2.2.3"
mistralai = "^1.5.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
